objects/Activity.object
<CustomObject>
    <fields>
        <fullName>FastCall__ACD_Call__c</fullName>
        <label>ACD Call</label>
        <picklist>
            <picklistValues>
                <fullName>Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FastCall__ACD_Position__c</fullName>
        <label>ACD Position</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Duration_In_Minutes__c</fullName>
        <formula>TEXT(FLOOR(CallDurationInSeconds/60)) &amp; &quot;:&quot; &amp;
IF(MOD(CallDurationInSeconds, 60) &lt; 10,
&quot;0&quot; &amp; TEXT(MOD(CallDurationInSeconds, 60)),
TEXT(MOD(CallDurationInSeconds, 60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration In Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Focus__c</fullName>
        <label>Call Focus</label>
        <picklist>
            <picklistValues>
                <fullName>New business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_From__c</fullName>
        <description>Phone number used as Caller Id when calling the target phone number</description>
        <label>Call From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Goal__c</fullName>
        <label>Call Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Call Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FastCall__Call_Notes__c</fullName>
        <description>Notes taken by the FastCall application while on call</description>
        <label>Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Number__c</fullName>
        <label>Call Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Recording__c</fullName>
        <description>URL to the audio file containing the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_Time__c</fullName>
        <formula>TEXT ( ABS ( VALUE ( MID ( TEXT ( CreatedDate ), 12, 2) ) - 7 ) ) &amp; MID ( TEXT ( CreatedDate ), 14, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Call_To__c</fullName>
        <description>Target phone number dialed</description>
        <label>Call To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FastCall__Conference_room_Id__c</fullName>
        <label>Conference room ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__From_City__c</fullName>
        <label>From City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__From_Country__c</fullName>
        <label>From Country</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__From_State__c</fullName>
        <label>From State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__From_Zip__c</fullName>
        <label>From Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Related_Call_Id__c</fullName>
        <description>For internal use of the FastCall application</description>
        <label>Related Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Spoke_to__c</fullName>
        <label>Spoke to?</label>
        <picklist>
            <picklistValues>
                <fullName>Decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FastCall__Twillio_Billing_Info__c</fullName>
        <formula>IF( ISNULL( CallObject ) , &quot;This Task is not a Call&quot;,  HYPERLINK(&quot;/apex/FastCall__TaskCallBillingInfo?id=&quot; &amp;  Id , &quot;View&quot; , &quot;_self&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twilio Billing Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FastCall__Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voicemail</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>